# profit_study

./: .gitignore  README.md  pyproject.toml
src/profit_study/: __init__.py  main.py
tests/: test_basic.py
